--- a/.github/workflows/nodejs-blog-practica.yml
+++ b/.github/workflows/nodejs-blog-practica.yml
@@ -1,4 +1,4 @@
-name: nodejs-blog-practica
+name: nom_repositori_workflow
 
 on:
   push:
@@ -25,3 +25,43 @@ jobs:
 
       - name: Run linter
         run: npm run lint
+
+  cypress_job:
+    name: Run Cypress tests
+    needs: linter_job
+    runs-on: ubuntu-latest
+    continue-on-error: true  
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+     
+      - name: Run Cypress tests
+        id: cypress
+        uses: cypress-io/github-action@v6
+        with:
+          build: npm run build
+          start: npm start
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 60
+
+     
+      - name: Save Cypress result
+        run: echo "${{ steps.cypress.outcome }}" > result.txt
+
+      
+      - name: Upload result artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-result
+          path: result.txt
