Fix YAML indentation for add_badge_job"

--- a/.github/workflows/nodejs-blog-practica.yml
+++ b/.github/workflows/nodejs-blog-practica.yml
@@ -1,4 +1,4 @@
-name: nom_repositori_workflow
+name: nodejs-blog-practica
 
 on:
   push:
@@ -30,10 +30,10 @@ jobs:
     name: Run Cypress tests
     needs: linter_job
     runs-on: ubuntu-latest
-    continue-on-error: true  
+    continue-on-error: true
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -45,7 +45,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-     
       - name: Run Cypress tests
         id: cypress
         uses: cypress-io/github-action@v6
@@ -55,44 +54,42 @@ jobs:
           wait-on: 'http://localhost:3000'
           wait-on-timeout: 60
 
-     
       - name: Save Cypress result
         run: echo "${{ steps.cypress.outcome }}" > result.txt
 
-      
-      - name: Upload result artifact
+      - name: Upload Cypress result artifact
         uses: actions/upload-artifact@v4
         with:
           name: cypress-result
           path: result.txt
 
   add_badge_job:
-  name: Add Cypress badge to README
-  needs: cypress_job
-  runs-on: ubuntu-latest
+    name: Add Cypress badge to README
+    needs: cypress_job
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Download Cypress result artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: cypress-result
+      - name: Download Cypress result artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: cypress-result
 
-    - name: Read Cypress outcome
-      id: read_result
-      run: echo "::set-output name=cypress_outcome::$(cat result.txt)"
+      - name: Read Cypress outcome
+        id: read_result
+        run: echo "::set-output name=cypress_outcome::$(cat result.txt)"
 
-    - name: Add test badge to README
-      uses: ./github/actions/add-badge
-      with:
-        outcome: ${{ steps.read_result.outputs.cypress_outcome }}
+      - name: Add test badge to README
+        uses: ./github/actions/add-badge
+        with:
+          outcome: ${{ steps.read_result.outputs.cypress_outcome }}
 
-    - name: Commit and push README update
-      run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add README.md
-        git commit -m "Update Cypress test badge"
-        git push
+      - name: Commit and push README update
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add README.md
+          git commit -m "Update Cypress test badge"
+          git push
