Ajustada la ruta de github-actiones

--- a/.github/workflows/nodejs-blog-practica.yml
+++ b/.github/workflows/nodejs-blog-practica.yml
@@ -79,10 +79,10 @@ jobs:
 
       - name: Read Cypress outcome
         id: read_result
-        run: echo "::set-output name=cypress_outcome::$(cat result.txt)"
+        run: echo "cypress_outcome=$(cat result.txt)" >> $GITHUB_OUTPUT
 
       - name: Add test badge to README
-        uses: ././github/actions/add-badge
+        uses: ./.github/actions/add-badge
         with:
           outcome: ${{ steps.read_result.outputs.cypress_outcome }}
 
